--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ripu2/ZILA-T-1#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "csvtojson": "^2.0.10",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
