--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "homepage": "https://github.com/ripu2/ZILA-T-1#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chalk": "^4.1.0",
     "csvtojson": "^2.0.10",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "mongoose": "^5.10.15",
     "multer": "^1.4.2",
     "nodemon": "^2.0.6"
   }
